--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "eth_ny",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "NFT subscription platform",
+  "description": "dist/index.js",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ruban Rengaraju",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.17.1"
   }
 }
