--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,11 +57,13 @@
     "react": "16.12.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
+    "react-icons": "^4.4.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^5.0.0",
     "reactstrap": "8.4.1",
-    "style-components": "^0.1.0"
+    "style-components": "^0.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/googlemaps": "3.39.2",
