--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^5.0.0",
