--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
   ],
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.3.4",
+    "@superfluid-finance/sdk-core": "^0.4.2",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "ethers": "^5.6.9",
