--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,7 +74,8 @@
     "style-components": "^0.1.0",
     "styled-components": "^5.3.5",
     "superfluid": "^0.0.11",
-    "wagmi": "^0.4.12"
+    "wagmi": "^0.4.12",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@types/googlemaps": "3.39.2",
