--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "@fontsource/manrope": "^4.5.10",
     "@rainbow-me/rainbowkit": "^0.3.4",
     "@superfluid-finance/sdk-core": "^0.4.2",
+    "axios": "^0.27.2",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "ethers": "^5.6.9",
